--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "async-require": "^1.2.2",
     "express": "^4.16.3",
+    "find-process": "^1.2.1",
     "mongodb": "^3.1.4",
     "opn": "^5.3.0",
     "socket.io": "^2.1.1",
+    "terminate": "^2.1.2",
     "vectors": "^0.1.0"
   },
   "author": "",
