--- a/settings.json
+++ b/settings.json
@@ -3,8 +3,8 @@
 	"maxTestItems": 4,
 	"loadTestData": true,
 	"testData": "./tests/dataForSpheronNG/0-basicProblemDefinitionNG.json",
-	"persistAfterPhase" : [true, false, false, false, false, true, false],
-	"ifPersistUpdateState" : [false, false, false, false, false, true, false],
+	"persistAfterPhase" : [true, true, true, true, true, true, true],
+	"ifPersistUpdateState" : [false, false, false, false, false, false, false],
 	"phaseSettings" :{
 		"disableMutation" : true
 	},
