--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.3",
     "extend": "^3.0.2",
     "find-process": "^1.2.1",
+    "line-by-line": "^0.1.6",
     "mongodb": "^3.1.4",
     "opn": "^5.3.0",
     "socket.io": "^2.1.1",
