--- a/settings.json
+++ b/settings.json
@@ -2,12 +2,10 @@
 	"maxTests": 3,
 	"maxTestItems": 4,
 	"loadTestData": true,
-	"testData": "./tests/dataForSpheronNG/lessonManager_1_5-run.json",
+	"testData": "./tests/dataForSpheronNG/lessonManager_1_5-run-timedInput.json",
 	"persistAfterPhase" : [true, true, true, true, true, true, true],
 	"ifPersistUpdateState" : [false, false, false, false, false, false, false],
-	"phaseSettings" :{
-		"disableMutation" : true
-	},
+	"disableMutation" : false,
 	"haltAfterTick": false,
 	"haltAfterTickNo": 100,
 	"haltAfterProcessingSpheron": false,
